# movie_predict

./: .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml  runserver.py
configs/: __init__.py  models.py
migrations/: env.py
migrations/versions/: 4683563045ee_add_year.py  7bbabe0dba76_init.py
movie_predict/: app.py  db.py
movie_predict/data_types/: router_module.py  url.py
movie_predict/normalization/: min_max_scaler.py
movie_predict/rest_api/: __init__.py
movie_predict/rest_api/songs/: models.py  routes.py
